--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,12 @@
       <properties>
         <gpg.skip>true</gpg.skip>
       </properties>
+      <repositories>
+        <repository>
+          <id>travis</id>
+          <url>${develop_repo_url}/repo</url>
+        </repository>
+      </repositories>
       <distributionManagement>
         <repository>
           <id>travis</id>
