--- a/pom.xml
+++ b/pom.xml
@@ -230,23 +230,23 @@
       <repositories>
         <repository>
           <id>travis</id>
-          <url>${develop_repo_url}/repo</url>
+          <url>${develop_repo_url}</url>
         </repository>
       </repositories>
       <pluginRepositories>
         <pluginRepository>
           <id>travis</id>
-          <url>${develop_repo_url}/repo</url>
+          <url>${develop_repo_url}</url>
         </pluginRepository>
       </pluginRepositories>
       <distributionManagement>
         <repository>
           <id>travis</id>
-          <url>dav:${develop_repo_url}/repo</url>
+          <url>dav:${develop_repo_url}</url>
         </repository>
         <site>
           <id>travis</id>
-          <url>dav:${develop_repo_url}/test-report/nablarch/${repo_name}/${timestamp}</url>
+          <url>dav:${develop_test_report_url}</url>
         </site>
       </distributionManagement>
     </profile>
