--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ script:
 - git clone -b master https://github.com/nablarch/nablarch-ci-script.git $HOME/build-script/
   && chmod +x $HOME/build-script/travis-ci/*.sh
 - $HOME/build-script/travis-ci/install-mvn-3.2.5.sh
-- $HOME/build-script/travis-ci/nablarch-mvn-build.sh
+- $HOME/build-script/travis-ci/prepare_travis_settings.sh
+- $HOME/build-script/travis-ci/nablarch-mvn-build.sh -p travis
 - $HOME/build-script/travis-ci/upload-mvn-test-report.sh
 notifications:
   slack:
