--- a/pom.xml
+++ b/pom.xml
@@ -10,33 +10,18 @@
   <name>Nablarch Maven Mojo for etl</name>
   <description>Nablarch Maven Mojo for etl.</description>
   <url>https://github.com/nablarch</url>
+  
+  <parent>
+    <groupId>com.nablarch</groupId>
+    <artifactId>nablarch-parent</artifactId>
+    <version>5u12</version>
+  </parent>
 
   <properties>
     <mavenPluginPluginVersion>3.4</mavenPluginPluginVersion>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss.SSSZ</maven.build.timestamp.format>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     <release.allow.snapshot>false</release.allow.snapshot>
   </properties>
-
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    </license>
-  </licenses>
-
-  <developers>
-    <developer>
-      <id>nablarch</id>
-      <name>Nablarch</name>
-      <email>nablarch@tis.co.jp</email>
-      <organization>Nablarch</organization>
-      <organizationUrl>https://github.com/nablarch</organizationUrl>
-    </developer>
-  </developers>
 
   <scm>
     <connection>scm:git:git://github.com/nablarch/nablarch-etl-maven-plugin.git</connection>
@@ -59,7 +44,6 @@
     <dependency>
       <groupId>com.nablarch.framework</groupId>
       <artifactId>nablarch-etl</artifactId>
-      <version>1.0.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -72,22 +56,9 @@
     <dependency>
       <groupId>org.jmockit</groupId>
       <artifactId>jmockit</artifactId>
-      <version>1.8</version>
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -144,100 +115,6 @@
           <allowTimestampedSnapshots>${release.allow.snapshot}</allowTimestampedSnapshots>
         </configuration>
       </plugin>
-
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.5</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
-            <manifestEntries>
-              <Created-Time>${maven.build.timestamp}</Created-Time>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.1</version>
-        <configuration>
-          <tagNameFormat>@{project.version}</tagNameFormat>
-          <allowTimestampedSnapshots>${release.allow.snapshot}</allowTimestampedSnapshots>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.5</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-webdav-jackrabbit</artifactId>
-        <version>3.0.0</version>
-      </extension>
-    </extensions>
   </build>
-
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </reporting>
-
-  <distributionManagement>
-    <repository>
-      <id>nablarch.staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-    </repository>
-    <snapshotRepository>
-      <id>nablarch.snapshot</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>travis</id>
-      <properties>
-        <gpg.skip>true</gpg.skip>
-      </properties>
-      <distributionManagement>
-        <repository>
-          <id>travis</id>
-          <url>${develop_repo_url}</url>
-        </repository>
-        <site>
-          <id>travis</id>
-          <url>${develop_test_report_url}</url>
-        </site>
-      </distributionManagement>
-    </profile>
-  </profiles>
-
 </project>
